--- a/src/hotelcasestudy/ADMIN_ReservationManagement.form
+++ b/src/hotelcasestudy/ADMIN_ReservationManagement.form
@@ -252,7 +252,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="510" y="30" width="810" height="590"/>
+              <AbsoluteConstraints x="30" y="120" width="1290" height="510"/>
             </Constraint>
           </Constraints>
 
@@ -260,6 +260,9 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                   <Connection code="tbModel1" type="code"/>
                 </Property>
@@ -285,7 +288,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="40" y="60" width="579" height="-1"/>
+              <AbsoluteConstraints x="20" y="10" width="579" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -307,7 +310,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="30" y="550" width="120" height="50"/>
+              <AbsoluteConstraints x="20" y="60" width="120" height="50"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -329,7 +332,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="170" y="550" width="170" height="50"/>
+              <AbsoluteConstraints x="160" y="60" width="170" height="50"/>
             </Constraint>
           </Constraints>
         </Component>
